notification endpoints and model, fix service
