# src/controllers/notification/create.js
@@ -1,0 +1,8 @@
+import Notification from 'models/Notification';
+
+const createNotification = async (notification) => {
+  const newNotification = await Notification.create(notification);
+  return newNotification;
+};
+
+export default createNotification;
