# src/controllers/notification/fetch.js
@@ -1,0 +1,9 @@
+import Notification from 'models/Notification';
+
+const fetchNotification = async (query) => {
+  const notifications = await Notification.find(query);
+
+  return notifications;
+};
+
+export default fetchNotification;
