# src/controllers/notification/update.js
@@ -1,0 +1,11 @@
+import Notification from 'models/Notification';
+
+const updateNotification = async (notificationId, notification) => {
+  const updated = await Notification.findOneAndUpdate(
+    { _id: notificationId }, notification, { new: true, useFindAndModify: false },
+  );
+  if (updated) return updated;
+  return false;
+};
+
+export default updateNotification;
